--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "pc-nrfconnect-rssi",
   "version": "1.3.1",
-  "description": "Demo application for nRF528xx SoC",
-  "displayName": "RSSI Viewer",
+  "description": "Live visualization of RSSI per frequency for nRF52832",
+  "displayName": "RSSI Viewer(Hephi)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NordicSemiconductor/pc-nrfconnect-rssi.git"
+    "url": ""
   },
-  "author": "Nordic Semiconductor ASA",
+  "author": "Hephi",
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
     "nrfconnect": "^3.7.0"
