--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pc-nrfconnect-rssi",
   "version": "1.4.1",
-  "description": "Demo application for nRF528xx SoC",
-  "displayName": "RSSI Viewer",
+  "description": "Live visualization of RSSI per frequency for nRF52832",
+  "displayName": "RSSI Viewer(Hephi)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NordicSemiconductor/pc-nrfconnect-rssi.git"
+    "url": "https://github.com/lhf-tech/pc-nrfconnect-rssi.git"
   },
   "author": "Nordic Semiconductor ASA",
   "license": "SEE LICENSE IN LICENSE",
